skeleton of Home page is ready

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <link rel="stylesheet" href="home.css" />
+  <link rel="stylesheet" href="style/home.css" />
 
   <style>
     #map {
@@ -17,11 +17,26 @@
 <body>
   <div class="header-logo center">
     <div class="logo-container">
-
     </div>
   </div>
-  <!-- <h2>Map Test</h2>
-  <div id="map"></div> -->
+
+  <div class="search-container">
+    <!-- Search -->
+    <div class="search-box">
+      <input type="text" id="searchInput" placeholder="Enter city or pincode">
+      <button id="searchBtn">Search</button>
+    </div>
+
+    <!-- Location Button -->
+    <button id="locBtn">📍 Use My Location</button>
+
+    <!-- Range Slider -->
+    <div class="range-box">
+      <label>Distance: <span id="rangeValue">3</span> km</label>
+      <input type="range" id="range" min="1000" max="30000" step="1000" value="5000">
+    </div>
+  </div>
   
+  <script type="module" src="script/home.js"></script>
 </body>
 </html>
