--- a/home.html
+++ b/home.html
@@ -32,10 +32,11 @@
 
     <!-- Range Slider -->
     <div class="range-box">
-      <label>Distance: <span id="rangeValue">3</span> km</label>
-      <input type="range" id="range" min="1000" max="30000" step="1000" value="5000">
+      <label>Distance: <span id="rangeValue"></span> km</label>
+      <input type="range" id="range" min="1000" max="30000" step="1000">
     </div>
   </div>
+
   
   <script type="module" src="script/home.js"></script>
 </body>
