--- a/home.html
+++ b/home.html
@@ -22,11 +22,17 @@
 
   <div class="search-container">
     <!-- Search -->
-    <div class="search-box">
-      <input type="text" id="searchInput" placeholder="Enter city or pincode">
-      <button id="searchBtn">Search</button>
+    <div class="center">
+      <div class="search-box">
+        <input type="text" id="searchInput" required class="input-text">
+        <div class="Enter-pincode">Enter city or pincode</div>
+        <button id="searchBtn" class="center">Search</button>
+      </div>
     </div>
 
+    <div id="or" class="center">
+      <div class="center">OR</div>
+    </div>
     <!-- Location Button -->
     <button id="locBtn">📍 Use My Location</button>
 
